force-app/main/default/objects/Assessment__c/fields/Assessor__c.field-meta.xml
<CustomField>
    <fullName>Assessor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Teacher</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assessments (Assessor)</relationshipLabel>
    <relationshipName>Assessments1</relationshipName>
    <type>Lookup</type>
</CustomField>