force-app/main/default/objects/Assessment__c/fields/Course_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Course_Assessment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Assessment</label>
    <referenceTo>Course_Assessment__c</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>