force-app/main/default/objects/Assessment__c/fields/Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enrollment</label>
    <referenceTo>Enrollment__c</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>