force-app/main/default/objects/Assessment__c/fields/Home_Work__c.field-meta.xml
<CustomField>
    <fullName>Home_Work__c</fullName>
    <label>Home Work</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD 1</fullName>
            </value>
            <value>
                <fullName>TBD 2</fullName>
            </value>
            <value>
                <fullName>TBD 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>