force-app/main/default/objects/Assessment__c/fields/Listening__c.field-meta.xml
<CustomField>
    <fullName>Listening__c</fullName>
    <label>Listening %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>