force-app/main/default/objects/Assessment__c/fields/Reading__c.field-meta.xml
<CustomField>
    <fullName>Reading__c</fullName>
    <label>Reading %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>