force-app/main/default/objects/Assessment__c/fields/Score_Grade__c.field-meta.xml
<CustomField>
    <fullName>Score_Grade__c</fullName>
    <label>Score/Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD 1</fullName>
            </value>
            <value>
                <fullName>TBD 2</fullName>
            </value>
            <value>
                <fullName>TBD 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>