force-app/main/default/objects/Assessment__c/fields/Speaking__c.field-meta.xml
<CustomField>
    <fullName>Speaking__c</fullName>
    <label>Speaking %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>