force-app/main/default/objects/Assessment__c/fields/Writing__c.field-meta.xml
<CustomField>
    <fullName>Writing__c</fullName>
    <label>Writing %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>