force-app/main/default/objects/Assessment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Student__c</columns>
    <columns>Enrollment__c</columns>
    <columns>Score_Grade__c</columns>
    <columns>Course_Assessment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>